--- a/css/main.css
+++ b/css/main.css
@@ -487,19 +487,17 @@ table {
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'check';
+  src: url("../fonts/check/check.eot?24040409");
+  src: url("../fonts/check/check.eot?24040409#iefix") format("embedded-opentype"), url("../fonts/check/check.woff2?24040409") format("woff2"), url("../fonts/check/check.woff?24040409") format("woff"), url("../fonts/check/check.ttf?24040409") format("truetype"), url("../fonts/check/check.svg?24040409#check") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 .clearfix:after {
   content: "";
   display: table;
   clear: both; }
-
-.centered {
-  display: table;
-  width: 100%;
-  height: 100%; }
-  .centered > * {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle; }
 
 body {
   background: #fff;
@@ -507,7 +505,7 @@ body {
   font-family: "Open Sans";
   font-size: 18px;
   font-weight: 400;
-  line-height: 42px; }
+  line-height: 46px; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #fff;
@@ -523,17 +521,21 @@ h1 {
 h2 {
   font-size: 37px;
   line-height: 39px;
+  padding-bottom: 35px;
+  text-align: center;
   font-weight: 600; }
 
 h3 {
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 600; }
+  font-size: 23px;
+  line-height: 25px;
+  font-weight: 600;
+  color: black;
+  padding-bottom: 10px; }
 
 h4 {
   font-size: 18px;
-  line-height: 25px;
-  font-weight: 300; }
+  line-height: 24px;
+  font-weight: 600; }
 
 h5 {
   font-size: 14px;
@@ -545,10 +547,10 @@ h6 {
   line-height: 1.4; }
 
 p {
-  padding: 0 0 42px;
+  padding: 0 0 46px;
   margin: 0;
   font-size: 14px;
-  line-height: 24px; }
+  line-height: 23px; }
 
 hr {
   overflow: hidden;
@@ -578,8 +580,7 @@ a {
       text-decoration: none; }
 
 a:hover {
-  text-decoration: none;
-  opacity: .8; }
+  text-decoration: none; }
 
 [class*="icon-"] {
   display: inline-block;
@@ -624,6 +625,38 @@ ol {
 
 .upper {
   text-transform: uppercase; }
+
+input,
+textarea {
+  display: block;
+  font-size: 15px;
+  color: #848484;
+  margin-bottom: 5px;
+  border-radius: 2px;
+  border: 1px solid #e8e8e8; }
+
+input[type='text']:focus,
+textarea:focus {
+  -webkit-box-shadow: 0 0 3px #848484;
+          box-shadow: 0 0 3px #848484; }
+
+input[type='submit']:focus {
+  position: relative;
+  top: 1px; }
+
+.btn {
+  font-size: "Open Sans", sans-serif;
+  display: block;
+  text-align: center;
+  color: #fff;
+  background-color: transparent;
+  border: 3px solid #fff;
+  padding-top: 0;
+  padding-bottom: 5px;
+  border-radius: 8px; }
+  .btn:hover {
+    color: #44a36f;
+    background-color: #fff; }
 
 *,
 *:before,
@@ -679,6 +712,7 @@ body {
 
 .call {
   position: absolute;
+  z-index: 50;
   width: 100%;
   top: 579px;
   text-align: center;
@@ -692,9 +726,9 @@ body {
             box-shadow: 0 1px 2px 0 #c4c4c4;
     margin: 0 auto; }
   .call__inp {
+    display: inline-block;
     border: 1px solid #e8e8e8;
     padding: 8px 17px;
-    font-size: 15px;
     -webkit-box-shadow: inset 0 1px #e8e8e8;
             box-shadow: inset 0 1px #e8e8e8;
     border-radius: 2px;
@@ -705,15 +739,22 @@ body {
     line-height: 20px;
     padding-bottom: 23px; }
   .call__press {
+    display: inline-block;
     color: #fff;
     background-color: #227dd3;
     border: none;
     padding: 4px 35px;
     font-size: 26px; }
+    .call__press:hover {
+      color: #227dd3;
+      background-color: white;
+      padding: 2px 33px;
+      border: 2px solid #227dd3; }
 
 .photo {
   margin-bottom: 22px;
-  overflow: hidden; }
+  overflow: hidden;
+  line-height: 0; }
   .photo__img {
     vertical-align: top;
     display: inline-block;
@@ -724,29 +765,119 @@ body {
     .photo__img--small {
       width: 68px; }
 
-.footer {
-  height: 242px; }
+footer {
+  position: relative;
+  height: 690px;
+  margin-top: 450px;
+  text-align: center; }
+
+.wrapper-map {
+  height: 639px; }
+
+#map {
+  height: 100%;
+  width: 100%;
+  margin: 0; }
+
+.gm-style-mtc,
+.gmnoprint,
+.gm-svpc {
+  display: none; }
+
+.circle-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  width: 430px;
+  height: 430px;
+  margin-left: -215px;
+  background-color: rgba(255, 255, 255, 0.7);
+  top: 163px;
+  left: 50%;
+  border-radius: 100%;
+  border: 1px solid gray; }
+
+.circle {
+  color: #000;
+  margin-top: 25px; }
+  .circle__inp, .circle__area {
+    width: 270px;
+    padding: 5px 10px;
+    margin-top: 10px; }
+  .circle__sub {
+    font-size: 80px;
+    color: #44a36f;
+    cursor: pointer; }
+    .circle__sub:hover {
+      color: #208f12; }
+    .circle__sub:active {
+      position: relative;
+      top: 1px; }
+
+.copy {
+  height: 50px;
+  background-color: #44a36f;
+  text-align: center; }
+  .copy__text {
+    padding: 0;
+    line-height: 50px; }
+
+.slider-carousel {
+  height: 400px; }
+
+.slide {
+  text-align: center;
+  padding: 0 150px; }
+  .slide__txt {
+    padding: 0; }
+
+.photos,
+.doc {
+  display: table-cell;
+  height: 400px;
+  vertical-align: middle; }
+  .photos div,
+  .doc div {
+    display: inline-block;
+    vertical-align: middle; }
+  .photos__img,
+  .doc__img {
+    width: 25%; }
+  .photos__descr,
+  .doc__descr {
+    text-align: left;
+    color: #000;
+    width: 57%; }
 
 .carousel {
-  height: 400px; }
+  height: 100%; }
 
 .main {
   position: relative; }
 
 .light-green {
+  position: relative;
   height: 900px;
-  padding-top: 80px;
+  padding-top: 230px;
   background-color: #5fc18b; }
 
 .dark-green {
-  -webkit-clip-path: polygon(0 36%, 100% 0%, 100% 100%, 0 100%);
-          clip-path: polygon(0 36%, 100% 0%, 100% 100%, 0 100%);
-  position: relative;
-  top: -353px;
-  padding-top: 300px;
+  -webkit-clip-path: polygon(0 40%, 100% 0%, 100% 100%, 0 100%);
+          clip-path: polygon(0 40%, 100% 0%, 100% 100%, 0 100%);
+  position: absolute;
+  text-align: right;
+  bottom: -458px;
+  padding-top: 354px;
   background-color: #44a36f;
   width: 100%;
-  height: 900px; }
+  height: 810px; }
 
 .triangel {
   background-color: #308355;
@@ -757,12 +888,38 @@ body {
   height: 263px;
   top: 0; }
 
-.device {
+.device-tablet {
+  position: absolute;
   text-align: center;
-  font-size: 150px; }
+  left: 205px;
+  top: 84px; }
+
+.device-laptop {
+  position: absolute;
+  left: -118px;
+  top: 370px; }
 
 .content {
+  position: relative;
+  z-index: 20;
   padding: 37px 125px; }
-  .content__title {
-    text-align: center;
-    padding-bottom: 35px; }
+
+.content-btn {
+  display: inline-block;
+  text-align: left;
+  width: 522px;
+  padding-right: 14px; }
+  .content-btn--left {
+    text-align: left;
+    font-size: 38px;
+    padding-bottom: 21px;
+    letter-spacing: 0.7px; }
+  .content-btn--txt {
+    padding-left: 7px;
+    padding-bottom: 39px;
+    line-height: 23px; }
+  .content-btn__wrapper {
+    width: 200px;
+    margin-left: 13px;
+    font-size: 27px;
+    font-weight: bold; }
