--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -123,7 +123,7 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
+    bottom: 70px;
 
     display: block;
 
@@ -143,7 +143,7 @@
 
     width: 20px;
     height: 20px;
-    margin: 0 5px;
+    margin: 0 17px;
     padding: 0;
 
     cursor: pointer;
@@ -179,7 +179,7 @@
 .slick-dots li button:before
 {
     font-family: 'slick';
-    font-size: 6px;
+    font-size: 16px;
     line-height: 20px;
 
     position: absolute;
@@ -193,7 +193,7 @@
     text-align: center;
 
     opacity: .25;
-    color: black;
+    color: #5fc18b;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -201,5 +201,5 @@
 .slick-dots li.slick-active button:before
 {
     opacity: .75;
-    color: black;
+    color: #5fc18b;
 }
