--- a/css/main.css
+++ b/css/main.css
@@ -524,6 +524,14 @@ h2 {
   padding-bottom: 35px;
   text-align: center;
   font-weight: 600; }
+  @media (max-width: 767px) {
+    h2 {
+      font-size: 27px;
+      line-height: 29px; } }
+  @media (max-width: 767px) {
+    h2 {
+      font-size: 23px;
+      line-height: 24px; } }
 
 h3 {
   font-size: 23px;
@@ -531,6 +539,9 @@ h3 {
   font-weight: 600;
   color: black;
   padding-bottom: 10px; }
+  @media (max-width: 767px) {
+    h3 {
+      font-size: 19px; } }
 
 h4 {
   font-size: 18px;
@@ -551,6 +562,9 @@ p {
   margin: 0;
   font-size: 14px;
   line-height: 23px; }
+  @media (max-width: 767px) {
+    p {
+      padding-bottom: 15px; } }
 
 hr {
   overflow: hidden;
@@ -671,6 +685,15 @@ body {
 .container {
   width: 900px;
   margin: 0 auto; }
+  @media (max-width: 1023px) {
+    .container {
+      width: 750px; } }
+  @media (max-width: 767px) {
+    .container {
+      width: 450px; } }
+  @media (max-width: 479px) {
+    .container {
+      width: 98%; } }
 
 .fixcontent {
   min-height: 100%;
@@ -679,6 +702,15 @@ body {
 
 .header {
   position: relative; }
+  @media (max-width: 1200px) {
+    .header {
+      margin-bottom: 120px; } }
+  @media (max-width: 1023px) {
+    .header {
+      margin-bottom: 200px; } }
+  @media (max-width: 1023px) {
+    .header {
+      margin-bottom: 250px; } }
 
 .gradient {
   position: absolute;
@@ -696,14 +728,50 @@ body {
   background: -webkit-gradient(linear, left bottom, left top, color-stop(26%, #040404), color-stop(26%, transparent));
   background: linear-gradient(to top, #040404 26%, transparent); }
 
+.slider__img {
+  width: 100%; }
+
 .logo {
   position: absolute;
   text-align: center;
   width: 100%;
   top: 68px;
   z-index: 10; }
-  .logo__pic {
+  @media (max-width: 1023px) {
+    .logo {
+      top: 35px; } }
+  @media (max-width: 479px) {
+    .logo {
+      top: 15px; } }
+  .logo__wrapper {
     margin-bottom: 61px; }
+    @media (max-width: 1023px) {
+      .logo__wrapper {
+        margin-bottom: 32px; } }
+    @media (max-width: 767px) {
+      .logo__wrapper {
+        margin-bottom: 10px; } }
+  @media (max-width: 1023px) {
+    .logo__img {
+      width: 250px; } }
+  @media (max-width: 767px) {
+    .logo__img {
+      width: 150px; } }
+  @media (max-width: 479px) {
+    .logo__img {
+      width: 100px; } }
+  @media (max-width: 1023px) {
+    .logo__title {
+      font-size: 40px;
+      line-height: 42px; } }
+  @media (max-width: 767px) {
+    .logo__title {
+      font-size: 27px;
+      line-height: 29px; } }
+  @media (max-width: 479px) {
+    .logo__title {
+      font-size: 20px;
+      line-height: 22px; } }
   .logo__title--bold {
     font-family: 'Open Sans', sans-serif;
     padding-top: 9px;
@@ -717,6 +785,9 @@ body {
   top: 579px;
   text-align: center;
   color: #938e8e; }
+  @media (max-width: 1023px) {
+    .call {
+      top: 90%; } }
   .call__wrapper {
     width: 334px;
     border-radius: 2px;
@@ -725,6 +796,9 @@ body {
     -webkit-box-shadow: 0 1px 2px 0 #c4c4c4;
             box-shadow: 0 1px 2px 0 #c4c4c4;
     margin: 0 auto; }
+    @media (max-width: 479px) {
+      .call__wrapper {
+        width: 300px; } }
   .call__inp {
     display: inline-block;
     border: 1px solid #e8e8e8;
@@ -750,6 +824,27 @@ body {
       background-color: white;
       padding: 2px 33px;
       border: 2px solid #227dd3; }
+    @media (max-width: 479px) {
+      .call__press {
+        font-size: 22px; } }
+
+.is-invalid {
+  background-color: red;
+  display: inline-block;
+  color: #fff;
+  border: 2px solid transparent;
+  padding: 4px 15px;
+  font-size: 26px; }
+  @media (max-width: 479px) {
+    .is-invalid {
+      font-size: 22px; } }
+  .is-invalid:hover {
+    color: red;
+    background-color: #fff;
+    border: 2px solid red; }
+
+.is-hidden {
+  display: none; }
 
 .photo {
   margin-bottom: 22px;
@@ -764,6 +859,9 @@ body {
       width: 65px; }
     .photo__img--small {
       width: 68px; }
+    @media (max-width: 479px) {
+      .photo__img {
+        width: 20%; } }
 
 footer {
   position: relative;
@@ -803,14 +901,33 @@ footer {
   left: 50%;
   border-radius: 100%;
   border: 1px solid gray; }
+  @media (max-width: 479px) {
+    .circle-form {
+      width: 310px;
+      margin-left: -155px; } }
 
 .circle {
   color: #000;
   margin-top: 25px; }
+  .circle__error {
+    padding: 5px 0;
+    color: white;
+    width: 270px;
+    background-color: red;
+    font-size: 15px;
+    font-weight: bold; }
+    @media (max-width: 479px) {
+      .circle__error {
+        width: 210px; } }
+    .circle__error:empty {
+      display: none; }
   .circle__inp, .circle__area {
     width: 270px;
     padding: 5px 10px;
     margin-top: 10px; }
+    @media (max-width: 479px) {
+      .circle__inp, .circle__area {
+        width: 210px; } }
   .circle__sub {
     font-size: 80px;
     color: #44a36f;
@@ -820,6 +937,12 @@ footer {
     .circle__sub:active {
       position: relative;
       top: 1px; }
+    @media (max-width: 479px) {
+      .circle__sub {
+        font-size: 60px; } }
+
+.error {
+  border-color: red; }
 
 .copy {
   height: 50px;
@@ -828,6 +951,9 @@ footer {
   .copy__text {
     padding: 0;
     line-height: 50px; }
+    @media (max-width: 479px) {
+      .copy__text {
+        font-size: 12px; } }
 
 .slider-carousel {
   height: 400px; }
@@ -835,6 +961,12 @@ footer {
 .slide {
   text-align: center;
   padding: 0 150px; }
+  @media (max-width: 1023px) {
+    .slide {
+      padding: 0 70px; } }
+  @media (max-width: 767px) {
+    .slide {
+      padding: 0 5px; } }
   .slide__txt {
     padding: 0; }
 
@@ -850,11 +982,22 @@ footer {
   .photos__img,
   .doc__img {
     width: 25%; }
+  .photos__pic,
+  .doc__pic {
+    width: 90%; }
+    @media (max-width: 1023px) {
+      .photos__pic,
+      .doc__pic {
+        width: 100%; } }
   .photos__descr,
   .doc__descr {
     text-align: left;
     color: #000;
-    width: 57%; }
+    width: 65%; }
+
+@media (max-width: 767px) {
+  .carousel .slick-dots {
+    bottom: 40px; } }
 
 .carousel {
   height: 100%; }
@@ -867,6 +1010,9 @@ footer {
   height: 900px;
   padding-top: 230px;
   background-color: #5fc18b; }
+  @media (max-width: 479px) {
+    .light-green {
+      height: 1050px; } }
 
 .dark-green {
   -webkit-clip-path: polygon(0 40%, 100% 0%, 100% 100%, 0 100%);
@@ -878,6 +1024,9 @@ footer {
   background-color: #44a36f;
   width: 100%;
   height: 810px; }
+  @media (max-width: 479px) {
+    .dark-green {
+      height: 840px; } }
 
 .triangel {
   background-color: #308355;
@@ -893,33 +1042,81 @@ footer {
   text-align: center;
   left: 205px;
   top: 84px; }
+  @media (max-width: 1023px) {
+    .device-tablet {
+      left: 50%;
+      margin-left: -300px; } }
+  @media (max-width: 479px) {
+    .device-tablet {
+      margin-left: -230px; } }
+  @media (max-width: 1023px) {
+    .device-tablet__img {
+      width: 400px;
+      height: 350px; } }
+  @media (max-width: 479px) {
+    .device-tablet__img {
+      width: 300px;
+      height: 250px; } }
 
 .device-laptop {
   position: absolute;
-  left: -118px;
+  z-index: 10;
+  left: -117px;
   top: 370px; }
+  @media (max-width: 1023px) {
+    .device-laptop {
+      margin-left: -300px;
+      left: 50%;
+      top: 230px; } }
+  @media (max-width: 1200px) {
+    .device-laptop__img {
+      width: 500px; } }
+  @media (max-width: 1023px) {
+    .device-laptop__img {
+      width: 400px;
+      height: 400px;
+      left: 120px;
+      top: 220px; } }
 
 .content {
   position: relative;
   z-index: 20;
   padding: 37px 125px; }
+  @media (max-width: 1023px) {
+    .content {
+      padding: 0; } }
 
 .content-btn {
   display: inline-block;
+  z-index: 30;
   text-align: left;
   width: 522px;
   padding-right: 14px; }
+  @media (max-width: 1023px) {
+    .content-btn {
+      position: relative;
+      width: 100%;
+      padding-right: 0;
+      padding-top: 50px; } }
   .content-btn--left {
     text-align: left;
-    font-size: 38px;
     padding-bottom: 21px;
     letter-spacing: 0.7px; }
+    @media (max-width: 767px) {
+      .content-btn--left {
+        text-align: center; } }
   .content-btn--txt {
     padding-left: 7px;
     padding-bottom: 39px;
     line-height: 23px; }
+    @media (max-width: 1023px) {
+      .content-btn--txt {
+        padding-bottom: 23px; } }
   .content-btn__wrapper {
     width: 200px;
     margin-left: 13px;
     font-size: 27px;
     font-weight: bold; }
+    @media (max-width: 479px) {
+      .content-btn__wrapper {
+        font-size: 23px; } }
